k8s/dynamic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-service
  namespace: dev
  labels:
    app: dynamic-app
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: dynamic-app
  ports:
  - name: dynamic-service
    port: 80
    targetPort: 80
