k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynamic-ingress
  namespace: dev
  labels:
    app: dynamic-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:

  - host: www.tecneuralai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dynamic-service
            port:
              number: 80

  - host: crewai.tecneuralai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dynamic-service
            port:
              number: 80

  - host: lurobenceai.tecneuralai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dynamic-service
            port:
              number: 80
